[gd_scene load_steps=5 format=3 uid="uid://bnj0qksov1kfe"]

[ext_resource type="Script" uid="uid://dl6jc2ofl8bjc" path="res://game/actions/feed/items/food_item.gd" id="1_fw0h8"]
[ext_resource type="Texture2D" uid="uid://bfrtnow2n3sfr" path="res://game/actions/feed/items/art/7_bread.png" id="2_s48lb"]
[ext_resource type="PackedScene" uid="uid://cmtnvqayxoalt" path="res://common/ui_animation_component/ui_animation_component.tscn" id="3_kjhky"]
[ext_resource type="StyleBox" uid="uid://cnn8unrfm38xr" path="res://game/ui/theme/panel/panel_window.tres" id="4_tmxp2"]

[node name="FoodItem" type="Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.5
offset_right = -760.0
offset_bottom = -560.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fw0h8")

[node name="UiAnimationComponent" parent="." instance=ExtResource("3_kjhky")]
properties = ["scale"]
hover_time = 0.08
hover_easing = 2
hover_scale = Vector2(1.2, 1.2)

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_s48lb")
expand_mode = 1

[node name="ItemInfo" type="Panel" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 80.0
offset_bottom = 69.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_tmxp2")

[node name="LabelName" type="Label" parent="ItemInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 3.0
offset_right = 18.0
offset_bottom = 17.0
grow_horizontal = 2
text = "Bread"

[node name="LabelPrice" type="Label" parent="ItemInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -13.0
offset_right = 59.0
offset_bottom = 1.0
grow_vertical = 2
text = "Cost: 1"

[node name="LabelConsume" type="Label" parent="ItemInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = 7.0
offset_right = 59.0
offset_bottom = 21.0
grow_vertical = 2
text = "Value: 2"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
